--- a/data-engineer.html
+++ b/data-engineer.html
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/i85jb4somqgiye1g7m5zzuaabo'>Manufacturing Data Engineer | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/i85jb4somqgiye1g7m5zzuaabo'>Manufacturing Data Engineer | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI  Madison</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://tlggconsulting.join.com/jobs/468687-data-engineer-m-f-d'>Job @ TLGG Consulting (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tlggconsulting.join.com/jobs/468687-data-engineer-m-f-d'>Job @ TLGG Consulting (Berlin): Data Engineer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -137,11 +137,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=orjZafwD&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nxAkpMw7&jvi=orjZafwD,Job&jvk=Job'>Medidata Solutions Careers - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=orjZafwD&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nxAkpMw7&jvi=orjZafwD,Job&jvk=Job'>Medidata Solutions Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4492957002'>Job Application for Head of Data Engineering at Tandem Bank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4492957002'>Job Application for Head of Data Engineering at Tandem Bank</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://durstexpress.join.com/jobs/463867-senior-data-engineer'>Job @ Durstexpress (Berlin): (Senior) Data Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://durstexpress.join.com/jobs/463867-senior-data-engineer'>Job @ Durstexpress (Berlin): (Senior) Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -209,7 +209,7 @@ systems,?...</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/boxycharm/jobs/1937585'>Job Application for BI Data Engineer at Boxy Charm</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxycharm/jobs/1937585'>Job Application for BI Data Engineer at Boxy Charm</a></h5> 
 <p><span class="badge badge-light">Pembroke Pines, FL  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -237,7 +237,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -302,7 +302,7 @@ systems,?...</p>
 <p>Oct 16, 2019 ... About TrantorFounded in 2009, Trantor is a leading software services company 
 headquartered in Menlo Park, California. We deliver innovative technology?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/frichti/j/B17E5A6B43/'>BI / Data Engineer (H/F) - Frichti</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/frichti/j/B17E5A6B43/'>BI / Data Engineer (H/F) - Frichti</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14 oct. 2019 ... En tant que BI / Data Engineer, vous rejoignez l'?quipe Data compos?e de data 
 analysts et data scientists. Sous la supervision du Head of Data, votre r?le est?...</p>
@@ -354,7 +354,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Seattle, WA  Seattle</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584819'>Stellenangebot: Data Engineer (m/w/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584819'>Stellenangebot: Data Engineer (m/w/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -476,7 +476,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4496358002'>Job Application for Data Engineering Manager at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4496358002'>Job Application for Data Engineering Manager at Starry</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
